--- a/dist_master/html/user/reg.html
+++ b/dist_master/html/user/reg.html
@@ -9,7 +9,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>注册</title>
     <link rel="stylesheet" href="../../css/base-56c273db45.css">
-    <link rel="stylesheet" href="../../css/user/user-72d243c7ab.module.css">
+    <link rel="stylesheet" href="../../css/user/user-d692351bd6.module.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             </div>
             <div class="form-input-box">
                 <label class="form-label"><img src="../../img/login-mscode.png" alt="" class="full-img"></label>
-                <input class="msgCode" type="text" placeholder="短信验证码" style="text-indent: 9rem;" v-model="smsValue">
+                <input class="msgCode" type="text" placeholder="短信验证码" v-model="smsValue">
                 <button id="sendBtn" class="sendBtn" v-bind:class="{ 'sendBtn-default-Bg': bgStatus, 'sendBtn-disabled-Bg': !bgStatus}" v-on:click="sendSms" v-bind="{ disabled: disableAttr}" v-html="sendTxt" disabled="true"></button>
             </div>
             <div class="form-agreement">
@@ -32,14 +32,23 @@
                     <span class="form-agreement-img no-agreement" v-if="!isAgreement" @click="isAgreement=true"></span>
                     <img v-else src="../../img/login-agree.png" alt="" class="form-agreement-img" @click="isAgreement=false">
                     <span>点击提交即表示同意</span>
-                    <a href="javascript:;" class="platformContract" @click="showContract">《用户服务协议》</a>
+                    <a href="javascript:;" class="platformContract" @click="maskShow=true">《用户服务协议》</a>
                 </p>
             </div>
-            <button id="regBtn" class="regBtn" v-on:click="verifiyCode" disabled="true">确认注册</button>
+            <button id="regBtn" class="regBtn" >确认注册</button>
+            <div class="tips">
+                <a class="doctor-reg" href="#">医生注册</a>
+                <a href="#">| 忘记密码</a>
+            </div>
         </section>
-        <div id="maskBg" class="maskBg" v-show="maskShow"></div>
+        <article class="platform-article" v-if="maskShow" @click="maskShow=false">
+            <p>23423423</p>
+            <p>23423423</p>
+            <p>点击关闭</p>
+        </article>
     </article>
-    <script src="../../js/user/reg-bd9edc35c5.js"></script>
+    
+    <script src="../../js/user/reg-bc8bd78f27.js"></script>
 </body>
 
 </html>
