--- a/dist_master/html/user/reg.html
+++ b/dist_master/html/user/reg.html
@@ -9,7 +9,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>注册</title>
     <link rel="stylesheet" href="../../css/base-56c273db45.css">
-    <link rel="stylesheet" href="../../css/user/user-d692351bd6.module.css">
+    <link rel="stylesheet" href="../../css/user/user-f83cc11d44.module.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
                     <span class="form-agreement-img no-agreement" v-if="!isAgreement" @click="isAgreement=true"></span>
                     <img v-else src="../../img/login-agree.png" alt="" class="form-agreement-img" @click="isAgreement=false">
                     <span>点击提交即表示同意</span>
-                    <a href="javascript:;" class="platformContract" @click="maskShow=true">《用户服务协议》</a>
+                    <a href="register-agreement.html" class="platform-contract">《用户服务协议》</a>
                 </p>
             </div>
             <button id="regBtn" class="regBtn" >确认注册</button>
@@ -41,11 +41,6 @@
                 <a href="#">| 忘记密码</a>
             </div>
         </section>
-        <article class="platform-article" v-if="maskShow" @click="maskShow=false">
-            <p>23423423</p>
-            <p>23423423</p>
-            <p>点击关闭</p>
-        </article>
     </article>
     
     <script src="../../js/user/reg-bc8bd78f27.js"></script>
