--- a/html/pages/asset-index.html
+++ b/html/pages/asset-index.html
@@ -20,6 +20,69 @@
           <div class="username flex-grow1">王某莫</div>
           <div class="user-detail">资料管理<i class="arrow-right"></i></div>
       </div>
+    </div>
+    <div class="page-main">
+      <div class="title">我的服务</div>
+      <div class="flex-wrap service-list" > 
+        <a class="service" href="#">
+          <div class="service-icon-wrap">
+              <img class="full-img" src="../../img/icon/icon-msg.png" >
+          </div>
+          <div class="">我的咨询</div>
+        </a>
+        <a class="service" href="#">
+            <div class="service-icon-wrap">
+                <img class="full-img" src="../../img/icon/icon-date.png" >
+            </div>
+          <div class="">用药订单</div>
+        </a>
+        <a class="service" href="#">
+            <div class="service-icon-wrap">
+                <img class="full-img" src="../../img/icon/icon-doctor.png" >
+            </div>
+          <div class="">我的医生</div>
+        </a>
+        <a class="service" href="#">
+            <div class="service-icon-wrap">
+                <img class="full-img" src="../../img/icon/icon-msg2.png" >
+            </div>
+          <div class="">我的评价</div>
+        </a>
+      </div>
+    </div>
+    <div class="page-main">
+        <div class="line-list" > 
+          <a class="flex-wrap line" href="#">
+            <img class="line-img" src="../../img/icon/icon-mens.png" >
+            <div class="line-msg">我的账户</div>
+            <i class="arrow-right"></i>
+          </a>
+          <a class="flex-wrap line" href="#">
+              <img class="line-img" src="../../img/icon/icon-date2.png" >
+              <div class="line-msg">我的就诊人</div>
+              <i class="arrow-right"></i>
+          </a>
+          <a class="flex-wrap line" href="#">
+            <img class="line-img" src="../../img/icon/icon-location.png" >
+            <div class="line-msg">常用地址</div>
+            <i class="arrow-right"></i>
+          </a>
+        </div>
+    </div>
+    <div class="page-main">
+        <div class="line-list" > 
+          <a class="flex-wrap line" href="#">
+            <img class="line-img" src="../../img/icon/icon-hear.png" >
+            <div class="line-msg">在线客服</div>
+            <i class="arrow-right"></i>
+          </a>
+          <a class="flex-wrap line" href="#">
+              <img class="line-img" src="../../img/icon/icon-set.png" >
+              <div class="line-msg">设置</div>
+              <i class="arrow-right"></i>
+          </a>
+        </div>
+    </div>
   </section>
   <script src="../../js/pages/asset-index.js"></script>
 </body>
