--- a/html/pages/doctor-list.html
+++ b/html/pages/doctor-list.html
@@ -9,7 +9,7 @@
   <meta name="format-detection" content="telephone=no">
   <title>医生列表</title>
   <link rel="stylesheet" href="../../css/base.css">
-  <link rel="stylesheet" href="../../css/pages/doctor-list.css">
+  <link rel="stylesheet" href="../../css/pages/advice-list.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
     </div>
     
   </section>
-  <script src="../../js/pages/doctor-list.js"></script>
+  <script src="../../js/pages/advice-list.js"></script>
 </body>
 
 </html>
