--- a/html/pages/doctor-list.html
+++ b/html/pages/doctor-list.html
@@ -15,7 +15,7 @@
 <body>
   <section class="advice-list-container page-container" id="advice-list-container" v-cloak>
     <div class="page-main">
-      <div class="doctor-list" v-if="tab1Flag"> 
+      <div class="doctor-list" > 
         <a class="doctor flex-wrap" href="#" v-for="doctor in doctorList">
           <div class="doctor-avatar">
               <img class="full-img" src="../../img/avatar.png" >
