--- a/html/pages/doctor-detail.html
+++ b/html/pages/doctor-detail.html
@@ -7,7 +7,7 @@
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="yes" name="apple-touch-fullscreen">
   <meta name="format-detection" content="telephone=no">
-  <title>评价</title>
+  <title>医生详情</title>
   <link rel="stylesheet" href="../../css/base.css">
   <link rel="stylesheet" href="../../css/pages/doctor-detail.css">
 </head>
