--- a/html/pages/submit-appraise.html
+++ b/html/pages/submit-appraise.html
@@ -7,7 +7,7 @@
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta content="yes" name="apple-touch-fullscreen">
   <meta name="format-detection" content="telephone=no">
-  <title>在线咨询</title>
+  <title>我的评价</title>
   <link rel="stylesheet" href="../../css/base.css">
   <link rel="stylesheet" href="../../css/pages/submit-appraise.css">
 </head>
