--- a/html/pages/add-address.html
+++ b/html/pages/add-address.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <article class="add-address-container" id="add-address-container" v-cloak>
+    <article class="add-address-container page-container" id="add-address-container" v-cloak>
         <section class="content">
                 <div class="form-input-box">
                     <label class="form-label">姓名</label>
