--- a/html/pages/consultation.html
+++ b/html/pages/consultation.html
@@ -8,6 +8,7 @@
   <meta content="yes" name="apple-touch-fullscreen">
   <meta name="format-detection" content="telephone=no">
   <title>在线咨询</title>
+  <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/2.0.1/weui.min.css">
   <link rel="stylesheet" href="../../css/base.css">
   <link rel="stylesheet" href="../../css/pages/consultation.css">
 </head>
@@ -42,7 +43,7 @@
         </div>
         <div class="">图文沟通，可开建议方</div>
       </div>
-      <div class="btn-submit">立即咨询</div>
+      <div class="btn-submit" @click="submit">立即咨询</div>
     </div>
   </section>
   <script src="../../js/pages/consultation.js"></script>
