--- a/html/pages/buy-advice.html
+++ b/html/pages/buy-advice.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </section>
-        <div class="btn-submit" >保存</div>
+        <div class="btn-submit" @click="submit">保存</div>
     </article>
     
     <script src="../../js/pages/buy-advice.js"></script>
