--- a/html/pages/order.html
+++ b/html/pages/order.html
@@ -24,11 +24,11 @@
                     <img class="location" src="../../img/icon/location.png"/>
                     <span class="addr">安徽省合肥市蜀山区XX小区1号楼2608室</span>
                 </div>
-                <img class="arrow-right" src="../../img/icon/icon-arraw-right.png"/>
+                <img class="arrow" src="../../img/icon/icon-arraw-right.png"/>
             </div>
             <div class="order-wrapper">
                 <div class="title flex-wrap">
-                    <div class="title-text">药方信息</div>
+                    <div class="title-text flex-grow1">药方信息</div>
                     <div class="title-detail">查看更多</div>
                     <img class="title-arrow" src="../../img/icon/icon-arraw-right.png"/>
                 </div>
@@ -62,36 +62,37 @@
                         <div class="send-type">快递</div>
                         <div class="send-info">医药费未满79元，运费为8元</div>
                     </div>
-                    <img src="../../img/login-agree.png"/>
+                    <img class="sletet" src="../../img/login-agree.png"/>
                 </div>
             </div>
-            <div class="order-wrapper">
-                <div class="title flex-wrap">
+            <div class="order-wrapper" style="padding: 0;">
+                <div class="prescription-title title flex-wrap">
                     <div class="title-text">开方金额</div>
                     <div class="title-detail">5.40元</div>
-                    <img class="title-arrow" src="../../img/icon/icon-arraw-right.png"/>
+                    <img class="title-arrow " src="../../img/icon/icon-arraw-right.png"/>
                 </div>
                 <div class="prescription">
-                    <p class="flex-wrap">
+                    <div class="flex-wrap">
                         <div class="flex-grow1">诊金</div>
                         <div class="">0.00</div>
-                    </p>
-                    <p class="flex-wrap">
+                    </div>
+                    <div class="flex-wrap">
                         <div class="flex-grow1">医药费</div>
                         <div class="">5.00</div>
-                    </p>
-                    <p class="flex-wrap">
+                    </div>
+                    <div class="flex-wrap">
                         <div class="flex-grow1">制作费</div>
                         <div class="">0.00</div>
-                    </p>
+                    </div>
                 </div>
 
-                <div class="title flex-wrap">
+                <div class="prescription-title title flex-wrap">
                     <div class="title-text">运费</div>
                     <div class="title-detail">8.40元</div>
+                    <div class="prescription-placeholder"></div>
                 </div>
             </div>
-            <div class="order-wrapper">
+            <div class="order-wrapper last-block">
                 <div class="title">
                     <div class="title-text">开方金额</div>
                 </div>
@@ -110,7 +111,10 @@
                     </div>
                 </div>
             </div>
-
+            <div class="page-bottom flex-wrap">
+                <div class="page-bottom-text">实付：¥13.40</div>
+                <div class="page-bottom-btn">立即支付</div>
+            </div>
         </section>
     </article>
     
