--- a/html/pages/order.html
+++ b/html/pages/order.html
@@ -7,7 +7,7 @@
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="yes" name="apple-touch-fullscreen">
     <meta name="format-detection" content="telephone=no">
-    <title>药方详情</title>
+    <title>支付订单</title>
     <link rel="stylesheet" href="../../css/base.css">
     <link rel="stylesheet" href="../../css/pages/order.css">
 </head>
